// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stackItems should stack items while moving an item 1`] = `
Object {
  "groupHeights": Array [
    60,
    30,
    30,
  ],
  "groupTops": Array [
    0,
    60,
    90,
  ],
  "groupsWithItemsDimensions": Object {
    "1": Object {
      "group": Object {
        "id": "1",
      },
      "height": 60,
      "index": 0,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540543600000,
            "collisionWidth": 6803877,
            "height": 22.5,
            "left": 4472.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 236.24572916666602,
          },
          "id": "0",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540532800000,
            "collisionWidth": 21203877,
            "height": 22.5,
            "left": 4097.222222222223,
            "stack": true,
            "top": 33.75,
            "width": 736.245729166666,
          },
          "id": "5",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540550800000,
            "collisionWidth": 24803877,
            "height": 22.5,
            "left": 4722.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 861.245729166666,
          },
          "id": "6",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540570000000,
            "collisionWidth": 14875919,
            "height": 22.5,
            "left": 5388.888888888889,
            "stack": true,
            "top": 33.75,
            "width": 516.5249652777784,
          },
          "id": "1",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540620000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 7125,
            "stack": true,
            "top": 3.75,
            "width": 708.2481944444444,
          },
          "id": "2",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "end_time": 1540550403877,
          "group": "1",
          "id": "0",
          "start_time": 1540543600000,
          "title": "title 0",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540554003877,
          "group": "1",
          "id": "5",
          "start_time": 1540532800000,
          "title": "title 5",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540575603877,
          "group": "1",
          "id": "6",
          "start_time": 1540550800000,
          "title": "title 6",
        },
        Object {
          "canMove": true,
          "canResize": "both",
          "end_time": 1540584875919,
          "group": "1",
          "id": "1",
          "start_time": 1540570000000,
          "title": "title 1",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540640397548,
          "group": "1",
          "id": "2",
          "start_time": 1540620000000,
          "title": "title 2",
        },
      ],
    },
    "2": Object {
      "group": Object {
        "id": "2",
      },
      "height": 30,
      "index": 1,
      "itemDimensions": Array [],
      "items": Array [],
    },
    "3": Object {
      "group": Object {
        "id": "3",
      },
      "height": 30,
      "index": 2,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540656000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 8375,
            "stack": true,
            "top": 3.75,
            "width": 625,
          },
          "id": "3",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540676397548,
          "group": "3",
          "id": "3",
          "start_time": 1540656000000,
          "title": "title 3",
        },
      ],
    },
  },
  "height": 120,
  "itemsWithInteractions": Array [
    Object {
      "canMove": false,
      "canResize": false,
      "end_time": 1540550403877,
      "group": "1",
      "id": "0",
      "start_time": 1540543600000,
      "title": "title 0",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540554003877,
      "group": "1",
      "id": "5",
      "start_time": 1540532800000,
      "title": "title 5",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540575603877,
      "group": "1",
      "id": "6",
      "start_time": 1540550800000,
      "title": "title 6",
    },
    Object {
      "canMove": true,
      "canResize": "both",
      "end_time": 1540584875919,
      "group": "1",
      "id": "1",
      "start_time": 1540570000000,
      "title": "title 1",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540640397548,
      "group": "1",
      "id": "2",
      "start_time": 1540620000000,
      "title": "title 2",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540676397548,
      "group": "3",
      "id": "3",
      "start_time": 1540656000000,
      "title": "title 3",
    },
  ],
}
`;

exports[`stackItems should stack items while resize item left 1`] = `
Object {
  "groupHeights": Array [
    60,
    30,
    30,
  ],
  "groupTops": Array [
    0,
    60,
    90,
  ],
  "groupsWithItemsDimensions": Object {
    "1": Object {
      "group": Object {
        "id": "1",
      },
      "height": 60,
      "index": 0,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540543600000,
            "collisionWidth": 3203877,
            "height": 22.5,
            "left": 4472.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 111.24572916666602,
          },
          "id": "0",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540532800000,
            "collisionWidth": 21203877,
            "height": 22.5,
            "left": 4097.222222222223,
            "stack": true,
            "top": 33.75,
            "width": 736.245729166666,
          },
          "id": "5",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540550800000,
            "collisionWidth": 24803877,
            "height": 22.5,
            "left": 4722.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 861.245729166666,
          },
          "id": "6",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540570000000,
            "collisionWidth": 14875919,
            "height": 22.5,
            "left": 5388.888888888889,
            "stack": true,
            "top": 33.75,
            "width": 516.5249652777784,
          },
          "id": "1",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540620000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 7125,
            "stack": true,
            "top": 3.75,
            "width": 708.2481944444444,
          },
          "id": "2",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "end_time": 1540546803877,
          "group": "1",
          "id": "0",
          "start_time": 1540543600000,
          "title": "title 0",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540554003877,
          "group": "1",
          "id": "5",
          "start_time": 1540532800000,
          "title": "title 5",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540575603877,
          "group": "1",
          "id": "6",
          "start_time": 1540550800000,
          "title": "title 6",
        },
        Object {
          "canMove": true,
          "canResize": "both",
          "end_time": 1540584875919,
          "group": "1",
          "id": "1",
          "start_time": 1540570000000,
          "title": "title 1",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540640397548,
          "group": "1",
          "id": "2",
          "start_time": 1540620000000,
          "title": "title 2",
        },
      ],
    },
    "2": Object {
      "group": Object {
        "id": "2",
      },
      "height": 30,
      "index": 1,
      "itemDimensions": Array [],
      "items": Array [],
    },
    "3": Object {
      "group": Object {
        "id": "3",
      },
      "height": 30,
      "index": 2,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540656000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 8375,
            "stack": true,
            "top": 3.75,
            "width": 625,
          },
          "id": "3",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540676397548,
          "group": "3",
          "id": "3",
          "start_time": 1540656000000,
          "title": "title 3",
        },
      ],
    },
  },
  "height": 120,
  "itemsWithInteractions": Array [
    Object {
      "canMove": false,
      "canResize": false,
      "end_time": 1540546803877,
      "group": "1",
      "id": "0",
      "start_time": 1540543600000,
      "title": "title 0",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540554003877,
      "group": "1",
      "id": "5",
      "start_time": 1540532800000,
      "title": "title 5",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540575603877,
      "group": "1",
      "id": "6",
      "start_time": 1540550800000,
      "title": "title 6",
    },
    Object {
      "canMove": true,
      "canResize": "both",
      "end_time": 1540584875919,
      "group": "1",
      "id": "1",
      "start_time": 1540570000000,
      "title": "title 1",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540640397548,
      "group": "1",
      "id": "2",
      "start_time": 1540620000000,
      "title": "title 2",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540676397548,
      "group": "3",
      "id": "3",
      "start_time": 1540656000000,
      "title": "title 3",
    },
  ],
}
`;

exports[`stackItems should stack items while resize item right 1`] = `
Object {
  "groupHeights": Array [
    60,
    30,
    30,
  ],
  "groupTops": Array [
    0,
    60,
    90,
  ],
  "groupsWithItemsDimensions": Object {
    "1": Object {
      "group": Object {
        "id": "1",
      },
      "height": 60,
      "index": 0,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540540000000,
            "collisionWidth": 10403877,
            "height": 22.5,
            "left": 4347.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 361.245729166666,
          },
          "id": "0",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540532800000,
            "collisionWidth": 21203877,
            "height": 22.5,
            "left": 4097.222222222223,
            "stack": true,
            "top": 33.75,
            "width": 736.245729166666,
          },
          "id": "5",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540550800000,
            "collisionWidth": 24803877,
            "height": 22.5,
            "left": 4722.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 861.245729166666,
          },
          "id": "6",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540570000000,
            "collisionWidth": 14875919,
            "height": 22.5,
            "left": 5388.888888888889,
            "stack": true,
            "top": 33.75,
            "width": 516.5249652777784,
          },
          "id": "1",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540620000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 7125,
            "stack": true,
            "top": 3.75,
            "width": 708.2481944444444,
          },
          "id": "2",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "end_time": 1540550403877,
          "group": "1",
          "id": "0",
          "start_time": 1540540000000,
          "title": "title 0",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540554003877,
          "group": "1",
          "id": "5",
          "start_time": 1540532800000,
          "title": "title 5",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540575603877,
          "group": "1",
          "id": "6",
          "start_time": 1540550800000,
          "title": "title 6",
        },
        Object {
          "canMove": true,
          "canResize": "both",
          "end_time": 1540584875919,
          "group": "1",
          "id": "1",
          "start_time": 1540570000000,
          "title": "title 1",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540640397548,
          "group": "1",
          "id": "2",
          "start_time": 1540620000000,
          "title": "title 2",
        },
      ],
    },
    "2": Object {
      "group": Object {
        "id": "2",
      },
      "height": 30,
      "index": 1,
      "itemDimensions": Array [],
      "items": Array [],
    },
    "3": Object {
      "group": Object {
        "id": "3",
      },
      "height": 30,
      "index": 2,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540656000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 8375,
            "stack": true,
            "top": 3.75,
            "width": 625,
          },
          "id": "3",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540676397548,
          "group": "3",
          "id": "3",
          "start_time": 1540656000000,
          "title": "title 3",
        },
      ],
    },
  },
  "height": 120,
  "itemsWithInteractions": Array [
    Object {
      "canMove": false,
      "canResize": false,
      "end_time": 1540550403877,
      "group": "1",
      "id": "0",
      "start_time": 1540540000000,
      "title": "title 0",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540554003877,
      "group": "1",
      "id": "5",
      "start_time": 1540532800000,
      "title": "title 5",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540575603877,
      "group": "1",
      "id": "6",
      "start_time": 1540550800000,
      "title": "title 6",
    },
    Object {
      "canMove": true,
      "canResize": "both",
      "end_time": 1540584875919,
      "group": "1",
      "id": "1",
      "start_time": 1540570000000,
      "title": "title 1",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540640397548,
      "group": "1",
      "id": "2",
      "start_time": 1540620000000,
      "title": "title 2",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540676397548,
      "group": "3",
      "id": "3",
      "start_time": 1540656000000,
      "title": "title 3",
    },
  ],
}
`;

exports[`stackItems work as expected 1`] = `
Object {
  "groupHeights": Array [
    60,
    30,
    30,
  ],
  "groupTops": Array [
    0,
    60,
    90,
  ],
  "groupsWithItemsDimensions": Object {
    "1": Object {
      "group": Object {
        "id": "1",
      },
      "height": 60,
      "index": 0,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540540000000,
            "collisionWidth": 6803877,
            "height": 22.5,
            "left": 4347.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 236.24572916666602,
          },
          "id": "0",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540532800000,
            "collisionWidth": 21203877,
            "height": 22.5,
            "left": 4097.222222222223,
            "stack": true,
            "top": 33.75,
            "width": 736.245729166666,
          },
          "id": "5",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540550800000,
            "collisionWidth": 24803877,
            "height": 22.5,
            "left": 4722.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 861.245729166666,
          },
          "id": "6",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540570000000,
            "collisionWidth": 14875919,
            "height": 22.5,
            "left": 5388.888888888889,
            "stack": true,
            "top": 33.75,
            "width": 516.5249652777784,
          },
          "id": "1",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540620000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 7125,
            "stack": true,
            "top": 3.75,
            "width": 708.2481944444444,
          },
          "id": "2",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "end_time": 1540546803877,
          "group": "1",
          "id": "0",
          "start_time": 1540540000000,
          "title": "title 0",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540554003877,
          "group": "1",
          "id": "5",
          "start_time": 1540532800000,
          "title": "title 5",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540575603877,
          "group": "1",
          "id": "6",
          "start_time": 1540550800000,
          "title": "title 6",
        },
        Object {
          "canMove": true,
          "canResize": "both",
          "end_time": 1540584875919,
          "group": "1",
          "id": "1",
          "start_time": 1540570000000,
          "title": "title 1",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540640397548,
          "group": "1",
          "id": "2",
          "start_time": 1540620000000,
          "title": "title 2",
        },
      ],
    },
    "2": Object {
      "group": Object {
        "id": "2",
      },
      "height": 30,
      "index": 1,
      "itemDimensions": Array [],
      "items": Array [],
    },
    "3": Object {
      "group": Object {
        "id": "3",
      },
      "height": 30,
      "index": 2,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540656000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 8375,
            "stack": true,
            "top": 3.75,
            "width": 625,
          },
          "id": "3",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540676397548,
          "group": "3",
          "id": "3",
          "start_time": 1540656000000,
          "title": "title 3",
        },
      ],
    },
  },
  "height": 120,
  "itemsWithInteractions": Array [
    Object {
      "canMove": false,
      "canResize": false,
      "end_time": 1540546803877,
      "group": "1",
      "id": "0",
      "start_time": 1540540000000,
      "title": "title 0",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540554003877,
      "group": "1",
      "id": "5",
      "start_time": 1540532800000,
      "title": "title 5",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540575603877,
      "group": "1",
      "id": "6",
      "start_time": 1540550800000,
      "title": "title 6",
    },
    Object {
      "canMove": true,
      "canResize": "both",
      "end_time": 1540584875919,
      "group": "1",
      "id": "1",
      "start_time": 1540570000000,
      "title": "title 1",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540640397548,
      "group": "1",
      "id": "2",
      "start_time": 1540620000000,
      "title": "title 2",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540676397548,
      "group": "3",
      "id": "3",
      "start_time": 1540656000000,
      "title": "title 3",
    },
  ],
}
`;

exports[`stackItems work as expected no stack 1`] = `
Object {
  "groupHeights": Array [
    30,
    30,
    30,
  ],
  "groupTops": Array [
    0,
    30,
    60,
  ],
  "groupsWithItemsDimensions": Object {
    "1": Object {
      "group": Object {
        "id": "1",
      },
      "height": 30,
      "index": 0,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540540000000,
            "collisionWidth": 6803877,
            "height": 22.5,
            "left": 4347.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 236.24572916666602,
          },
          "id": "0",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540532800000,
            "collisionWidth": 21203877,
            "height": 22.5,
            "left": 4097.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 736.245729166666,
          },
          "id": "5",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540550800000,
            "collisionWidth": 24803877,
            "height": 22.5,
            "left": 4722.222222222223,
            "stack": true,
            "top": 3.75,
            "width": 861.245729166666,
          },
          "id": "6",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540570000000,
            "collisionWidth": 14875919,
            "height": 22.5,
            "left": 5388.888888888889,
            "stack": true,
            "top": 3.75,
            "width": 516.5249652777784,
          },
          "id": "1",
        },
        Object {
          "dimensions": Object {
            "collisionLeft": 1540620000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 7125,
            "stack": true,
            "top": 3.75,
            "width": 708.2481944444444,
          },
          "id": "2",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "end_time": 1540546803877,
          "group": "1",
          "id": "0",
          "start_time": 1540540000000,
          "title": "title 0",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540554003877,
          "group": "1",
          "id": "5",
          "start_time": 1540532800000,
          "title": "title 5",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540575603877,
          "group": "1",
          "id": "6",
          "start_time": 1540550800000,
          "title": "title 6",
        },
        Object {
          "canMove": true,
          "canResize": "both",
          "end_time": 1540584875919,
          "group": "1",
          "id": "1",
          "start_time": 1540570000000,
          "title": "title 1",
        },
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540640397548,
          "group": "1",
          "id": "2",
          "start_time": 1540620000000,
          "title": "title 2",
        },
      ],
    },
    "2": Object {
      "group": Object {
        "id": "2",
      },
      "height": 30,
      "index": 1,
      "itemDimensions": Array [],
      "items": Array [],
    },
    "3": Object {
      "group": Object {
        "id": "3",
      },
      "height": 30,
      "index": 2,
      "itemDimensions": Array [
        Object {
          "dimensions": Object {
            "collisionLeft": 1540656000000,
            "collisionWidth": 20397548,
            "height": 22.5,
            "left": 8375,
            "stack": true,
            "top": 3.75,
            "width": 625,
          },
          "id": "3",
        },
      ],
      "items": Array [
        Object {
          "canMove": false,
          "canResize": false,
          "className": "",
          "end_time": 1540676397548,
          "group": "3",
          "id": "3",
          "start_time": 1540656000000,
          "title": "title 3",
        },
      ],
    },
  },
  "height": 90,
  "itemsWithInteractions": Array [
    Object {
      "canMove": false,
      "canResize": false,
      "end_time": 1540546803877,
      "group": "1",
      "id": "0",
      "start_time": 1540540000000,
      "title": "title 0",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540554003877,
      "group": "1",
      "id": "5",
      "start_time": 1540532800000,
      "title": "title 5",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540575603877,
      "group": "1",
      "id": "6",
      "start_time": 1540550800000,
      "title": "title 6",
    },
    Object {
      "canMove": true,
      "canResize": "both",
      "end_time": 1540584875919,
      "group": "1",
      "id": "1",
      "start_time": 1540570000000,
      "title": "title 1",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540640397548,
      "group": "1",
      "id": "2",
      "start_time": 1540620000000,
      "title": "title 2",
    },
    Object {
      "canMove": false,
      "canResize": false,
      "className": "",
      "end_time": 1540676397548,
      "group": "3",
      "id": "3",
      "start_time": 1540656000000,
      "title": "title 3",
    },
  ],
}
`;
